--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # Change to your preferred region
+          aws-region: us-east-2  # Change to your preferred region
 
       # Step 3: Install zip utility
       - name: Install zip
@@ -39,4 +39,4 @@ jobs:
       # Step 5: Sync the zipped file to the S3 bucket
       - name: Deploy to S3
         run: |
-          aws s3 cp index.zip s3://uco-cicc-media/proj3/
+          aws s3 cp index.zip s3://proj3-group27-bucket-sdk/proj3/
