--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,8 +35,35 @@ jobs:
             echo "No HTML files found to zip."
             exit 1
           fi
+      # Step 5: Package and deploy the first Lambda function
+      - name: Package and deploy Lambda function 1
+        run: |
+          if [ -f lambda_function.py ]; then
+            zip -r lambda_function.zip lambda_function.py
+            aws lambda update-function-code \
+              --function-name ProcessImageFunctionSDK \
+              --zip-file fileb://lambda_function.zip
+          else
+            echo "Lambda function file not found."
+            exit 1
+          fi
+
+      # Step 6: Package and deploy the second Lambda function
+      - name: Package and deploy Lambda function 2
+        run: |
+          if [ -f proj3_deployment_lambda.py ]; then
+            zip -r proj3_deployment_lambda.zip proj3_deployment_lambda.py
+            aws lambda update-function-code \
+              --function-name SdkStartAmplifyDeployment \
+              --zip-file fileb://proj3_deployment_lambda.zip
+          else
+            echo "proj3_deployment_lambda 2 file not found."
+            exit 1
+          fi
 
       # Step 5: Sync the zipped file to the S3 bucket
       - name: Deploy to S3
         run: |
           aws s3 cp index.zip s3://proj3-group27-bucket-sdk/proj3/
+          aws s3 cp proj3_deployment_lambda.zip s3://proj3-group27-bucket-sdk/proj3/
+          aws s3 cp lambda_function.zip s3://proj3-group27-bucket-sdk/proj3/
